RESOLVED FIXED66475
Fix clang libc++ C++0x build
https://bugs.webkit.org/show_bug.cgi?id=66475
Summary Fix clang libc++ C++0x build
Anders Carlsson
Reported 2011-08-18 09:54:32 PDT
Fix clang libc++ C++0x build
Attachments
Patch (1.93 KB, patch)
2011-08-18 09:55 PDT, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2011-08-18 09:55:33 PDT
Anders Carlsson
Comment 2 2011-08-18 09:56:24 PDT
Darin Adler
Comment 3 2011-08-18 10:47:29 PDT
Comment on attachment 104353 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=104353&action=review > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:-3907 > - if (isnan(width)) > - width = 100; > - if (isnan(height)) > - height = 100; I think this indicates a bug. We are probably making width and height be 0 if you pass undefined from JavaScript rather than 100. Someone working on WebGL should probably look into this and make a test case.
Note You need to log in before you can comment on or make changes to this bug.