Fix clang libc++ C++0x build https://bugs.webkit.org/show_bug.cgi?id=66475

Reviewed by Adam Roben.

Remove calls to isnan and isfinite with integer arguments.

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::viewport):


Canonical link: https://commits.webkit.org/82312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93316 268f45cc-cd09-0410-ab3c-d52691b4dbfc